--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,46 +40,44 @@ endif()
 add_custom_target(all_tools
     DEPENDS BCD1Creator CTRKViewer DEV7Launcher OBCViewer OBJDumper ModelPathDumper LoaderMDO)
 
-# Install commands
+# Install commands (Linux only)
 option(ENABLE_INSTALL "Enable installation of the project" ON)
 
-if(ENABLE_INSTALL)
+if(ENABLE_INSTALL AND CMAKE_SYSTEM_NAME STREQUAL "Linux")
     install(TARGETS BCD1Creator CTRKViewer DEV7Launcher OBCViewer OBJDumper ModelPathDumper LoaderMDO
         RUNTIME DESTINATION bin)
 
-    # Linux-only: Create symlinks for all tools
-    if(CMAKE_SYSTEM_NAME STREQUAL "Linux")
-        install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-            ${CMAKE_INSTALL_PREFIX}/bin/BCD1Creator
-            ${CMAKE_INSTALL_PREFIX}/bin/bcd1creator)")
+    # Create symlinks for all tools
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/BCD1Creator
+        ${CMAKE_INSTALL_PREFIX}/bin/bcd1creator)")
 
-        install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-            ${CMAKE_INSTALL_PREFIX}/bin/CTRKViewer
-            ${CMAKE_INSTALL_PREFIX}/bin/ctrkviewer)")
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/CTRKViewer
+        ${CMAKE_INSTALL_PREFIX}/bin/ctrkviewer)")
 
-        install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-            ${CMAKE_INSTALL_PREFIX}/bin/DEV7Launcher
-            ${CMAKE_INSTALL_PREFIX}/bin/dev7launcher)")
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/DEV7Launcher
+        ${CMAKE_INSTALL_PREFIX}/bin/dev7launcher)")
 
-        install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-            ${CMAKE_INSTALL_PREFIX}/bin/OBCViewer
-            ${CMAKE_INSTALL_PREFIX}/bin/obcviewer)")
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/OBCViewer
+        ${CMAKE_INSTALL_PREFIX}/bin/obcviewer)")
 
-        install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-            ${CMAKE_INSTALL_PREFIX}/bin/OBJDumper
-            ${CMAKE_INSTALL_PREFIX}/bin/objdumper)")
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/OBJDumper
+        ${CMAKE_INSTALL_PREFIX}/bin/objdumper)")
 
-        install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-            ${CMAKE_INSTALL_PREFIX}/bin/ModelPathDumper
-            ${CMAKE_INSTALL_PREFIX}/bin/modelpathdumper)")
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/ModelPathDumper
+        ${CMAKE_INSTALL_PREFIX}/bin/modelpathdumper)")
 
-        install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
-            ${CMAKE_INSTALL_PREFIX}/bin/LoaderMDO
-            ${CMAKE_INSTALL_PREFIX}/bin/loadermdo)")
-    endif()
+    install(CODE "execute_process(COMMAND ${CMAKE_COMMAND} -E create_symlink
+        ${CMAKE_INSTALL_PREFIX}/bin/LoaderMDO
+        ${CMAKE_INSTALL_PREFIX}/bin/loadermdo)")
 endif()
 
-# Linux-only: Uninstall command
+# Uninstall command (Linux only)
 if(NOT TARGET uninstall AND CMAKE_SYSTEM_NAME STREQUAL "Linux")
     add_custom_target(uninstall
         COMMAND ${CMAKE_COMMAND} -E remove "${CMAKE_INSTALL_PREFIX}/bin/BCD1Creator"
