--- a/.github/workflows/macos.yml
+++ b/.github/workflows/macos.yml
@@ -27,33 +27,17 @@ jobs:
 
       - name: Compile all C++ programs
         run: make cmake
-
-      - name: Compile IMGConverter
-        run: pyinstaller --onefile --distpath . tools/IMGConverter/IMGConverter.py
-
-      - name: Compile AdultCornerDecoder
-        run: pyinstaller --onefile --distpath . tools/AdultCornerDecoder/decoder.py
-
-      - name: Compile AdultCornerEncoder
-        run: pyinstaller --onefile --distpath . tools/AdultCornerEncoder/encoder.py
-
-      - name: Compile IMGIdentifier
-        run: pyinstaller --onefile --distpath . tools/IMGIdentifier/IMGIdentifier.py
-
-      - name: Compile OBCEditor
-        run: pyinstaller --onefile --distpath . tools/OBCEditor/OBCEditor.py
-
-      - name: Compile PetiteDetector
-        run: pyinstaller --onefile --distpath . tools/PetiteDetector/PetiteDetector.py
-
-      - name: Compile PKLiteDetector
-        run: pyinstaller --onefile --distpath . tools/PKLiteDetector/PKLiteDetector.py
-
-      - name: Compile SecuROMDetector
-        run: pyinstaller --onefile --distpath . tools/SecuROMDetector/SecuROMDetector.py
-
-      - name: Compile copyDatas
-        run: pyinstaller --onefile --distpath . tools/copyDatas/copyDatas.py
+        
+      - name: Compile all Python tools
+        run: | 
+          pyinstaller --onefile --distpath . tools/IMGConverter/IMGConverter.py
+          pyinstaller --onefile --distpath . tools/AdultCornerDecoder/decoder.py
+          pyinstaller --onefile --distpath . tools/AdultCornerEncoder/encoder.py
+          pyinstaller --onefile --distpath . tools/IMGIdentifier/IMGIdentifier.pypyinstaller --onefile --distpath . tools/OBCEditor/OBCEditor.py
+          pyinstaller --onefile --distpath . tools/PetiteDetector/PetiteDetector.py
+          pyinstaller --onefile --distpath . tools/PKLiteDetector/PKLiteDetector.py
+          pyinstaller --onefile --distpath . tools/SecuROMDetector/SecuROMDetector.py
+          pyinstaller --onefile --distpath . tools/copyDatas/copyDatas.py
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
