--- a/.github/workflows/windows-cmake.yml
+++ b/.github/workflows/windows-cmake.yml
@@ -32,7 +32,8 @@ jobs:
           pyinstaller --onefile --distpath . tools/IMGConverter/IMGConverter.py
           pyinstaller --onefile --distpath . tools/AdultCornerDecoder/decoder.py
           pyinstaller --onefile --distpath . tools/AdultCornerEncoder/encoder.py
-          pyinstaller --onefile --distpath . tools/IMGIdentifier/IMGIdentifier.pypyinstaller --onefile --distpath . tools/OBCEditor/OBCEditor.py
+          pyinstaller --onefile --distpath . tools/IMGIdentifier/IMGIdentifier.py
+          pyinstaller --onefile --distpath . tools/OBCEditor/OBCEditor.py
           pyinstaller --onefile --distpath . tools/PetiteDetector/PetiteDetector.py
           pyinstaller --onefile --distpath . tools/PKLiteDetector/PKLiteDetector.py
           pyinstaller --onefile --distpath . tools/SecuROMDetector/SecuROMDetector.py
